ADD configurar sequelize

--- a/src/views/productDetail.ejs
+++ b/src/views/productDetail.ejs
@@ -1,94 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<%- include('./partials/head') %>
-    <%- include('./partials/header') %>
-        <body>
-            <main class="main-mc">
-                <p>
-                    <img class="img-principal-mc" src=<%= "/images/productImages/"+product.image %> alt=<%= "/images/productImages/"+product.image %> >
-                    <!-- completar cuando elaboremos imagen dinamica en controlador zar7  -->
-                </p>
-                <section class="main-descripcion-mc">
-                    <div class="descripcion-esrb-buy">
-                        <div class="descripcion-producto-mc">
-                            <h2>
-                                <%= product.titulo %> 
-                            </h2>
-                            <!--  va a venir por parametro de caracteristicas  -->
-                            <p>
-                                <%= product.plataforma %>
-                            </p>
-                            <!--  ejemplo de parametrized object  -->
-                        </div>
-                        <p class="precio-mc">
-                            $<%= product.price %>
-                            <div class="discount"><%= product.discount %></div>
-                        </p>
-                        <div class="esrb-buy">
-                            <div class="buy-mc">
-                                <button class="cart-mc">Agregar al carrito <i class="fas fa-cart-plus"></i></button>
-                            </div>
-                            <div class="esrb">
-                                <% switch (product.age) {
-                                    case product.age = 'E': %> 
-                                    <img class="esrb-photo" src="/images/ERSB-Everyone.png" alt="imagen calificacion E"><br>
-                                        <% break;
-                                    
-                                    case product.age = 'M': %>
-                                    <img class="esrb-photo" src="/images/ESRB-Mature.png" alt="imagen calificacion M"><br>
-                                    <% break;
-
-                                    case product.age = 'T': %>
-                                    <img class="esrb-photo" src="/images/ESRB-Teen.png" alt="imagen calificacion T"><br>
-                                    <% break;
-                                } %> 
-                            </div>
-                        </div>
-                    </div>
-                </section>
-                <section class="requisitos">
-                    <div class="tecnicos">
-                        <h4 class="h4-mc">Datos técnicos</h4>
-                        <div class="datos-tecnicos">
-                            <p>
-                                <%= product.datos_Tecnicos %>
-                            </p>
-                        </div>
-                    </div>
-                    <div class="requisitos-pc">
-                        <h4 class="h4-mc">Requisitos del sistema</h4>
-                        <div class="requisitos-min">
-                                <p>
-                                    MINIMO:<br>
-                                    <%= product.requisitos %>
-                                </p>
-                                
-                        </div>
-                    </div>
-                </section>
-                </section>
-                <div class="resumen-mc">
-                    Características:<br>
-                    <%= product.resumen %>
-                </div>
-                <section class="version">
-                    <h4 class="h4-mc">Ediciones</h4>
-                    <aiv>
-                        <h4 class="h4-mc">Standard</h4>
-
-                        </div>
-                </section>
-                <section class="complementos">
-                    <h4 class="h4-mc">Complementos</h4>
-                </section>
-                <div class="informacion-legal-developer">
-                    Copyright ©
-                    <a href= '<%= product.legal %>'><%= product.legal %></a>
-                </div>
-                </section>
-                <a href="/shopping-cart"><button id="cart"><i class="fas fa-shopping-cart"></i></button></a>
-            </main>
-            <%- include('./partials/footer') %>
-        </body>
-
-</html>
+Hola
