--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -1,73 +1,94 @@
 <!DOCTYPE html>
 <html class="html-marcos" lang="en">
 
-    <%- include('./partials/head') %>
+<%- include('./partials/head') %>
     <%- include('./partials/header') %>
 
-<body class="body-marcos">
-    
-    <main class="main-home">
-        <div class="container">
-            <div class="lanzamientos">
-                <a href="/products/2">
-                <img class="img-lanzamiento" src="/images/productImages/family-disruption1.jpg" alt="Family Disruption">
-                </a>
-            </div>
-            <section class="container-bs">
-                <h2 class="tittle">Más vendidos</h2>
-                <div class="best-seller">
-                    <% for (let index = 0; index < products.length; index++) { %>
-                        <article class="game">
-                            <div class="container-img">
-                                <a href="/products/<%= products[index].id %>">
-                                <img class="imagen" src= <%= "/images/productImages/"+ products[index].image_Secundaria %>  alt= "/images/productImages/"<%= products[index].image_Secundaria %>>
-                            </a>
-                            </div>
-                            <div id= 'info' class="info">
-                                <h3 class="name"><%= products[index].titulo %></h3>
-                                <p class="category"><%= products[index].category %></p>
-                                <div class="box-price">
-                                    <p class="price">$<%= products[index].price %></p>
-                                    <p class="discount"><%= products[index].discount %></p>
-                                </div>
-                                <a href="#">
-                                    <button class="button">Agregar al carrito  <i class="fas fa-shopping-cart"></i></button>
-                                </a>
-                            </div>
-                        </article>
-                   <% } %>
-            </section>
-            <section class="container-cs">
-                <h2 class="tittle">Próximamente</h2>
-                <div class="comming-soon">
-                    <% for (let index = 0; index < products.length; index++) { %>
-                        <article class="game">
-                            <div class="container-img">
-                                <a href="/products/<%= products[index].id %>">
-                                <img class="imagen" src= <%= "/images/productImages/"+ products[index].image_Secundaria %>  alt= "/images/productImages/"<%= products[index].image_Secundaria %>>
-                            </a>
-                            </div>
-        
-                            <div id= 'info' class="info">
-                                <h3 class="name"><%= products[index].titulo %></h3>
-                                <p class="category"><%= products[index].category %></p>
-                                <div class="box-price">
-                                    <p class="price">$<%= products[index].price %></p>
-                                    <p class="discount"><%= products[index].discount %></p>
-                                </div>
-                                <a href="#">
-                                    <button class="button">Agregar al carrito  <i class="fas fa-shopping-cart"></i></button>
-                                </a>
-                            </div>
-                        </article>
-                   <% } %>
-            </section>
+        <body class="body-marcos">
+
+            <main class="main-home">
+                <div class="container">
+                    <div class="lanzamientos">
+                        <a href="/products/2">
+                            <img class="img-lanzamiento" src="/images/productImages/family-disruption1.jpg" alt="Family Disruption">
+                        </a>
+                    </div>
+                    <section class="container-bs">
+                        <h2 class="tittle">Más vendidos</h2>
+                        <div class="best-seller">
+                            <% for (let index = 0; index < products.length; index++) { %>
+                                <article class="game">
+                                    <div class="container-img">
+                                        <a href="/products/<%= products[index].id %>">
+                                            <img class="imagen" src=< %="/images/productImages/" + products[index].image_Secundaria %> alt= "/images/productImages/"
+                                            <%= products[index].image_Secundaria %>>
+                                        </a>
+                                    </div>
+                                    <div id='info' class="info">
+                                        <h3 class="name">
+                                            <%= products[index].titulo %>
+                                        </h3>
+                                        <p class="category">
+                                            <%= products[index].category %>
+                                        </p>
+                                        <div class="box-price">
+                                            <p class="price">$
+                                                <%= products[index].price %>
+                                            </p>
+                                            <p class="discount">
+                                                <%= products[index].discount %>
+                                            </p>
+                                        </div>
+                                        <a href="#">
+                                            <button class="button">Agregar al carrito  <i class="fas fa-shopping-cart"></i></button>
+                                        </a>
+                                    </div>
+                                </article>
+                                <% } %>
+                    </section>
+                    <section class="container-cs">
+                        <h2 class="tittle">Próximamente</h2>
+                        <div class="comming-soon">
+                            <% for (let index = 0; index < products.length; index++) { %>
+                                <article class="game">
+                                    <div class="container-img">
+                                        <a href="/products/<%= products[index].id %>">
+                                            <img class="imagen" src=< %="/images/productImages/" + products[index].image_Secundaria %> alt= "/images/productImages/"
+                                            <%= products[index].image_Secundaria %>>
+                                        </a>
+                                    </div>
+
+                                    <div id='info' class="info">
+                                        <h3 class="name">
+                                            <%= products[index].titulo %>
+                                        </h3>
+                                        <p class="category">
+                                            <%= products[index].category %>
+                                        </p>
+                                        <div class="box-price">
+                                            <p class="price">$
+                                                <%= products[index].price %>
+                                            </p>
+                                            <p class="discount">
+                                                <%= products[index].discount %>
+                                            </p>
+                                        </div>
+                                        <a href="#">
+                                            <button class="button">Agregar al carrito  <i class="fas fa-shopping-cart"></i></button>
+                                        </a>
+                                    </div>
+                                </article>
+                                <% } %>
+                    </section>
 
 
-        </div>
-        <a href="/shopping-cart"><button id="cart"><i class="fas fa-shopping-cart"></i></button></a>
-    </main>
-    <%- include('./partials/footer') %>
-</body>
+                    </div>
+                    <a href="/shopping-cart"><button id="cart"><i class="fas fa-shopping-cart"></i></button></a>
+            </main>
+            <%- include('./partials/footer') %>
+                <script src="/js/script.js"></script>
+        </body>
+
+
 
 </html>
