Fixed simple relational table

--- a/src/views/edit-game.ejs
+++ b/src/views/edit-game.ejs
@@ -27,7 +27,7 @@
                             <label class="tittle-m block">Dificultad</label>
                             <select name="dificult" class="input-style" value=<%=product.idDificultad %>>
                         <option>Fácil</option>
-                        <option><%=product.idDificultad %></option>
+                        <option><%=product.Dificultad.nombre %></option>
                         <option>Dificil</option>
                     </select>
                         </div>
